[gd_scene load_steps=2 format=3 uid="uid://b6ybupb06dlsw"]

[ext_resource type="Script" uid="uid://tye3eyv0qptn" path="res://scripts/Camera/camera_zone.gd" id="1_y6if2"]

[node name="CameraZone" type="Area2D"]
script = ExtResource("1_y6if2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="CameraPosition" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
